cabal-version:      3.0
name:               walktower
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
category:           Game
build-type:         Simple

extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable walktower
    import:           warnings
    main-is:          Main.hs
    other-modules:    Types
    build-depends:    base ^>=4.17.2.1,
                      network,
                      bytestring,
                      text
    hs-source-dirs:   app
    default-language: GHC2021
